[CORE] add models ( DTO and Entities )

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=8080
+spring.datasource.url=jdbc:h2:file:~/drones
+spring.datasource.username=musalaSoft
+spring.datasource.password=P@ssW0rd
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+drone.min-battery-level=25
+drone.periodic-drones-battery-check=0 0 8 * * *
