[CORE] add docker file and postman collection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
-spring.datasource.url=jdbc:h2:file:~/drones
+server.servlet.context-path=/drones
+spring.datasource.url=jdbc:h2:file:~/dronesdc
 spring.datasource.username=musalaSoft
 spring.datasource.password=P@ssW0rd
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
